--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,7 @@
     <div id="container">
         <div id="header">
             <div id="headerItems">
-                <h1 id="company">MonkeySurvey*</h1>
-                <p id="logo">Replace with logo</p>
+                <h1>Monkey Survey :)</h1>
             </div>
         </div>
         <div id="body">
