--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -36,8 +36,7 @@
 <div id="container">
     <div id="header">
         <div id="headerItems">
-            <h1 id="company">MonkeySurvey*</h1>
-            <p id="logo">Replace with logo</p>
+            <h1>Results</h1>
         </div>
     </div>
 
